SFDCProject/src/objects/FS_Action__c.object
<CustomObject>
    <description>Report of specific activities performed during an on-site visit.</description>
    <fields>
        <fullName>FS_Action_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Action Code for this FS Action report item</description>
        <inlineHelpText>Select the Action Code for this action</inlineHelpText>
        <label>Action Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FS_Action_Code__c.FS_Act_Code_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FS_Action_Code__c</referenceTo>
        <relationshipLabel>FS Actions</relationshipLabel>
        <relationshipName>FS_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Action_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date when the FS Action was performed</description>
        <inlineHelpText>Enter the date when this action was performed</inlineHelpText>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FS_Action_Desc__c</fullName>
        <description>Additional Notes about the FS Action being reported</description>
        <inlineHelpText>Enter additional Notes about the FS Action being reported</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FS_Amount__c</fullName>
        <description>The amount for with this FS Action record (used for reporting expenses)</description>
        <inlineHelpText>Enter the amount for this FS Action record</inlineHelpText>
        <label>Material Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Attach_Photos_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to indicate that Attach Photos are attached to the FS Dispatch.</description>
        <inlineHelpText>Check this box to indicate that Attach Photos are attached to the FS Dispatch.</inlineHelpText>
        <label>Photos Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Component_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Component being reported in the FS Action record</description>
        <inlineHelpText>Select the code for the component being reported in the FS Action record</inlineHelpText>
        <label>Component Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FS_Component_Code__c.FS_Component_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FS_Component_Code__c</referenceTo>
        <relationshipLabel>FS Actions</relationshipLabel>
        <relationshipName>FS_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch__c</fullName>
        <description>Parent FS Dispatch record for this FS Action</description>
        <inlineHelpText>Select the parent FS Dispatch record for this FS Action</inlineHelpText>
        <label>FS Dispatch</label>
        <referenceTo>FS_Dispatch__c</referenceTo>
        <relationshipLabel>FS Actions</relationshipLabel>
        <relationshipName>FS_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>FS_Hours__c</fullName>
        <description>Hours for the FS Action records (0.5 = 30 minutes)</description>
        <inlineHelpText>Enter the number of hours for the FS Action records (in hours and fractional hours, ie 0.5 = 30 minutes)</inlineHelpText>
        <label>Labor Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_New_Unit_KwH_Reading__c</fullName>
        <description>KwH reading on the new or replacement unit</description>
        <inlineHelpText>Enter the KwH reading on the new or replacement unit</inlineHelpText>
        <label>New Energy Reading, kWh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_New_Unit_Manufacturer__c</fullName>
        <description>Model of the new or replacement unit</description>
        <inlineHelpText>Enter the model of the new or replacement unit</inlineHelpText>
        <label>New Unit Manufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_New_Unit_Model__c</fullName>
        <description>Model of the new or replacement unit</description>
        <inlineHelpText>Enter the model of the new or replacement unit</inlineHelpText>
        <label>New Unit Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_New_Unit_Serial__c</fullName>
        <description>Serial number of the new or replacement unit</description>
        <inlineHelpText>Enter the serial number of the new or replacement unit</inlineHelpText>
        <label>New Unit Serial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_New_Unit_Signal_Strength__c</fullName>
        <description>Signal strength of the new or replacement unit</description>
        <inlineHelpText>Enter the signal strength of the new or replacement unit</inlineHelpText>
        <label>New Communication Signal Strength</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Old_Unit_KwH_Reading__c</fullName>
        <description>KwH reading on the removed or existing unit</description>
        <inlineHelpText>Enter the KwH reading on the removed or existing unit</inlineHelpText>
        <label>Old Energy Reading, kWh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Old_Unit_Manufacturer__c</fullName>
        <description>Name of the removed or existing unit manufacturer</description>
        <inlineHelpText>Enter the name of the removed or existing unit manufacturer</inlineHelpText>
        <label>Old Unit Manufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Old_Unit_Model__c</fullName>
        <description>Model of the removed or existing unit</description>
        <inlineHelpText>Enter the model of the removed or existing unit</inlineHelpText>
        <label>Old Unit Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Old_Unit_Serial__c</fullName>
        <description>Serial number of the removed or existing unit</description>
        <inlineHelpText>Enter the serial number of the removed or existing unit</inlineHelpText>
        <label>Old Unit Serial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Old_Unit_Signal_Strength__c</fullName>
        <description>Signal strength of the removed or existing unit</description>
        <inlineHelpText>Enter the signal strength of the removed or existing unit</inlineHelpText>
        <label>Old Communication Signal Strength</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Prompt_01__c</fullName>
        <description>Prompt for 1st section of FS Action edit page layout</description>
        <formula>SUBSTITUTE(

IF( FS_Action_Code__r.FS_Get_Dollars_Info__c  = TRUE
  ||  FS_Action_Code__r.FS_Get_Hours_Info__c = TRUE
  ||  FS_Component_Code__r.FS_GET_Qty__c  = TRUE
  ||  FS_Component_Code__r.FS_Get_Desc__c  = TRUE
  , &quot;REQUIRED FIELDS: &quot;, &quot;&quot;)
&amp; 
IF (FS_Action_Code__r.FS_Get_Dollars_Info__c  = TRUE, &quot;Amount &quot;,&quot;&quot;)
&amp;
IF (FS_Action_Code__r.FS_Get_Hours_Info__c  = TRUE, &quot; Hours &quot;,&quot;&quot;)
&amp;
IF ( FS_Component_Code__r.FS_GET_Qty__c  = TRUE  = TRUE, &quot; Quantity &quot;,&quot;&quot;)
&amp;
IF (FS_Component_Code__r.FS_Get_Desc__c = TRUE, &quot; Description&quot;,&quot;&quot;)

, &quot;  &quot;, &quot;, &quot;)</formula>
        <label>FS Prompt 01</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Prompt_02__c</fullName>
        <description>Prompt to display for the 2nd section of the page layout</description>
        <formula>IF (FS_Action_Code__r.FS_Get_Old_Info__c = TRUE,

SUBSTITUTE(

IF (FS_Component_Code__r.FS_Get_Serial__c = TRUE
|| FS_Component_Code__r.FS_Get_Model__c = TRUE
|| FS_Component_Code__r.FS_Get_Manufacturer__c = TRUE
|| FS_Component_Code__r.FS_Get_Signal_Strength__c = TRUE
|| FS_Component_Code__r.FS_Get_KwH__c = TRUE, &quot;REQUIRED FIELDS:&quot;,&quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_Manufacturer__c = TRUE, &quot; Manufacturer &quot;, &quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_Model__c = TRUE, &quot; Model &quot;, &quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_Serial__c = TRUE, &quot; Serial Number &quot;,&quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_KwH__c = TRUE, &quot; KwHr Reading &quot;, &quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_Signal_Strength__c = TRUE, &quot; Signal Strength&quot;,&quot;&quot;)

, &quot;  &quot;, &quot;, &quot;)

,&quot;&quot;)</formula>
        <label>FS Prompt 02</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Prompt_03__c</fullName>
        <description>Prompt for the 3rd section of the FS Action page layout</description>
        <formula>IF (FS_Action_Code__r.FS_Get_New_Info__c = TRUE,

SUBSTITUTE(

IF (FS_Component_Code__r.FS_Get_Serial__c = TRUE 
  ||  FS_Component_Code__r.FS_Get_Model__c = TRUE
  ||  FS_Component_Code__r.FS_Get_Manufacturer__c = TRUE
  ||  FS_Component_Code__r.FS_Get_Signal_Strength__c = TRUE
  ||  FS_Component_Code__r.FS_Get_KwH__c = TRUE, &quot;REQUIRED FIELDS:&quot;,&quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_Manufacturer__c = TRUE, &quot; Manufacturer &quot;, &quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_Model__c = TRUE, &quot; Model &quot;, &quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_Serial__c = TRUE, &quot; Serial Number &quot;,&quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_KwH__c = TRUE, &quot; KwHr Reading &quot;, &quot;&quot;)
&amp;
IF(FS_Component_Code__r.FS_Get_Signal_Strength__c = TRUE, &quot; Signal Strength&quot;,&quot;&quot;)

, &quot;  &quot;, &quot;, &quot;)

,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FS Prompt 03</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Quantity__c</fullName>
        <description>Quantity removed or installed</description>
        <inlineHelpText>Enter the quantity</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Supplemental_Documents_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to indicate that supplemental documents are attached.</description>
        <inlineHelpText>Check this box to indicate that supplemental documents are attached.</inlineHelpText>
        <label>Supplemental Documents Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Voltage_Test__c</fullName>
        <description>Enter the voltage test performed for this action</description>
        <inlineHelpText>Enter the voltage test performed for this action</inlineHelpText>
        <label>Voltage Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Failure_Reason__c</fullName>
        <label>Inverter Failure Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware/software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arc fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Reading__c</fullName>
        <description>Allows user to enter the last reading from the invter</description>
        <label>Inverter Reading, kWh</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meter_Failure_Reason__c</fullName>
        <description>Describes the reason for a meter replacement</description>
        <label>Meter Failure Reason</label>
        <picklist>
            <picklistValues>
                <fullName>-280 SSI Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blank SSI Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clock Drift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heartbeat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105/106 Non Comm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORDISP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Panel_Failure_Reason__c</fullName>
        <label>Panel Failure Reason</label>
        <picklist>
            <picklistValues>
                <fullName>golf ball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>squirrel damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>low output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>FS Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FSA-{0000}</displayFormat>
        <label>FS Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FS Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FS_Action_and_Component_Reqd</fullName>
        <active>true</active>
        <description>All FS Action records must have an Action and a Component</description>
        <errorConditionFormula>ISBLANK( FS_Action_Code__c ) ||  ISBLANK( FS_Component_Code__c  ) ||  ISNULL( FS_Action_Code__c ) ||  ISNULL( FS_Component_Code__c  ) ||
 FS_Action_Code__r.Name = &quot;--None--&quot; ||
 FS_Component_Code__r.Name  = &quot;--None--&quot;</errorConditionFormula>
        <errorDisplayField>FS_Action_Code__c</errorDisplayField>
        <errorMessage>There must be a valid value for both Action Code and Component Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Amount_Reqd</fullName>
        <active>true</active>
        <description>Amount is required.</description>
        <errorConditionFormula>BLANKVALUE( FS_Amount__c , -9999.123598 ) = -9999.123598 &amp;&amp;
FS_Action_Code__r.FS_Get_Dollars_Info__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Amount__c</errorDisplayField>
        <errorMessage>Amount is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Desc_Reqd</fullName>
        <active>false</active>
        <description>Description is required</description>
        <errorConditionFormula>BLANKVALUE( FS_Action_Desc__c  , &quot;&quot;) = &quot;&quot; &amp;&amp;
 FS_Component_Code__r.FS_Get_Desc__c = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Action_Desc__c</errorDisplayField>
        <errorMessage>Action Description is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Hours_Reqd</fullName>
        <active>true</active>
        <description>Hours is required</description>
        <errorConditionFormula>BLANKVALUE(  FS_Hours__c   , -9999.20382039) = -9999.20382039 &amp;&amp;
 FS_Action_Code__r.FS_Get_Hours_Info__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Hours__c</errorDisplayField>
        <errorMessage>Hours is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_New_KwH_Reqd</fullName>
        <active>true</active>
        <description>The New KwHr Reading is required</description>
        <errorConditionFormula>BLANKVALUE(  FS_New_Unit_KwH_Reading__c  , -83129081.0942380) = -83129081.0942380 &amp;&amp; 
 FS_Action_Code__r.FS_Get_New_Info__c = TRUE &amp;&amp;
 FS_Component_Code__r.FS_Get_KwH__c   = TRUE</errorConditionFormula>
        <errorDisplayField>FS_New_Unit_KwH_Reading__c</errorDisplayField>
        <errorMessage>The New KwHr Reading is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_New_Manuf_Reqd</fullName>
        <active>true</active>
        <description>New Unit Manufacturer is required</description>
        <errorConditionFormula>BLANKVALUE(  FS_New_Unit_Manufacturer__c   , &quot;&quot;) = &quot;&quot; &amp;&amp; 
FS_Action_Code__r.FS_Get_New_Info__c   = TRUE &amp;&amp; 
FS_Component_Code__r.FS_Get_Manufacturer__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_New_Unit_Manufacturer__c</errorDisplayField>
        <errorMessage>New Unit Manufacturer is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_New_Model_Reqd</fullName>
        <active>true</active>
        <description>The New Unit Model is required</description>
        <errorConditionFormula>BLANKVALUE( FS_New_Unit_Model__c , &quot;&quot;) = &quot;&quot; &amp;&amp; 
 FS_Action_Code__r.FS_Get_New_Info__c = TRUE &amp;&amp;
 FS_Component_Code__r.FS_Get_Model__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_New_Unit_Model__c</errorDisplayField>
        <errorMessage>The New Unit Model is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_New_Serial_Reqd</fullName>
        <active>true</active>
        <description>New Serial Number is required</description>
        <errorConditionFormula>BLANKVALUE(  FS_New_Unit_Serial__c  , &quot;&quot;) = &quot;&quot; &amp;&amp;
FS_Action_Code__r.FS_Get_New_Info__c = TRUE &amp;&amp;
 FS_Component_Code__r.FS_Get_Serial__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_New_Unit_Serial__c</errorDisplayField>
        <errorMessage>New Serial Number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_New_Strength_Reqd</fullName>
        <active>true</active>
        <description>New Communication Strength is required</description>
        <errorConditionFormula>BLANKVALUE(  FS_New_Unit_Signal_Strength__c  , -83129081.0942380) = -83129081.0942380 &amp;&amp;
FS_Action_Code__r.FS_Get_New_Info__c = TRUE &amp;&amp;
 FS_Component_Code__r.FS_Get_Signal_Strength__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_New_Unit_Signal_Strength__c</errorDisplayField>
        <errorMessage>New Communication Strength is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_No_changes_after_Approved_FS_Action</fullName>
        <active>false</active>
        <description>Changes to FS Action is not allowed after the Dispatch Findings are Approved

Deactivated per Dave Kenny 6/27/12</description>
        <errorConditionFormula>FS_Dispatch__r.FS_Approve_Findings__c = TRUE</errorConditionFormula>
        <errorMessage>Changes to FS Action is not allowed after the Dispatch Findings are Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Old_KwH_Reqd</fullName>
        <active>true</active>
        <description>The Old KwHr Reading is required</description>
        <errorConditionFormula>BLANKVALUE(  FS_Old_Unit_KwH_Reading__c  , -83129081.0942380) = -83129081.0942380 &amp;&amp; 
 FS_Action_Code__r.FS_Get_Old_Info__c = TRUE &amp;&amp;
 FS_Component_Code__r.FS_Get_KwH__c   = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Old_Unit_KwH_Reading__c</errorDisplayField>
        <errorMessage>The Old KwHr Reading is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Old_Manuf_Reqd</fullName>
        <active>true</active>
        <description>Old Unit Manufacturer is required</description>
        <errorConditionFormula>BLANKVALUE(  FS_Old_Unit_Manufacturer__c   , &quot;&quot;) = &quot;&quot; &amp;&amp; 
FS_Action_Code__r.FS_Get_Old_Info__c   = TRUE &amp;&amp; 
FS_Component_Code__r.FS_Get_Manufacturer__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Old_Unit_Manufacturer__c</errorDisplayField>
        <errorMessage>Old Unit Manufacturer is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Old_Model_Reqd</fullName>
        <active>true</active>
        <description>The Old Unit Model is required</description>
        <errorConditionFormula>BLANKVALUE( FS_Old_Unit_Model__c , &quot;&quot;) = &quot;&quot; &amp;&amp; 
 FS_Action_Code__r.FS_Get_Old_Info__c = TRUE &amp;&amp;
 FS_Component_Code__r.FS_Get_Model__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Old_Unit_Model__c</errorDisplayField>
        <errorMessage>The Old Unit Model is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Old_Serial_Reqd</fullName>
        <active>true</active>
        <description>Old Serial Number is required</description>
        <errorConditionFormula>BLANKVALUE(  FS_Old_Unit_Serial__c  , &quot;&quot;) = &quot;&quot; &amp;&amp;
FS_Action_Code__r.FS_Get_Old_Info__c = TRUE &amp;&amp;
 FS_Component_Code__r.FS_Get_Serial__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Old_Unit_Serial__c</errorDisplayField>
        <errorMessage>Old Serial Number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Old_Strength_Reqd</fullName>
        <active>true</active>
        <description>Old Communication Strength is required</description>
        <errorConditionFormula>BLANKVALUE(  FS_Old_Unit_Signal_Strength__c  , -83129081.0942380) = -83129081.0942380 &amp;&amp;
FS_Action_Code__r.FS_Get_Old_Info__c = TRUE &amp;&amp;
 FS_Component_Code__r.FS_Get_Signal_Strength__c  = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Old_Unit_Signal_Strength__c</errorDisplayField>
        <errorMessage>Old Communication Strength is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Qty_Reqd</fullName>
        <active>true</active>
        <description>Quantity is required.</description>
        <errorConditionFormula>BLANKVALUE( FS_Quantity__c , -9999.1236548) = -9999.1236548 &amp;&amp;
 FS_Component_Code__r.FS_GET_Qty__c = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Quantity__c</errorDisplayField>
        <errorMessage>Quantity is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_Voltage_Test_Reqd</fullName>
        <active>true</active>
        <description>Voltage Test is required</description>
        <errorConditionFormula>BLANKVALUE(FS_Voltage_Test__c,&quot;&quot;) = &quot;&quot; &amp;&amp;
 FS_Component_Code__r.FS_Get_Voltage_Test__c = TRUE</errorConditionFormula>
        <errorDisplayField>FS_Voltage_Test__c</errorDisplayField>
        <errorMessage>Voltage Test is required</errorMessage>
    </validationRules>
</CustomObject>